2009-02-26	Jannis Pohlmann <jannis@xfce.org>

	* == Released 0.2.10 == 
	* NEWS, configure.in.in: Bump version.

2008-12-07	Nick Schermer <nick@xfce.org>

	* terminal/main.c: Fix typo, patch by Enrico Tröger.
	* terminal/trunk/terminal/terminal-screen.c, 
	  terminal/trunk/terminal/terminal-widget.h: Fix Bug #4689.

2008-11-06	Jannis Pohlmann <jannis@xfce.org>

	* terminal/terminal-dialogs.c: Change URL from os-cillation to the
	  Terminal project site on xfce.org. 

2008-09-13	Nick Schermer <nick@xfce.org>

	* terminal/terminal-screen.c: Don't depend on Glib 2.14 (using
	  g_timeout_add_seconds in the code). Bug #4378.

2008-09-05	Jannis Pohlmann <jannis@xfce.org>

	* autogen.sh: Add git svn revision versioning support.

2008-05-26	Benedikt Meurer <benny@xfce.org>

	* doc/, terminal/, THANKS: Apply patch from Mikel Ward
	  <mikel@mikelward.com> to add support for a --maximize
	  command line option.

2007-12-02	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.
	* terminal/: Re-apply patch from Nick Schermer <nick@xfce.org> to
	  enable Drag and Drop for tabs between Terminal windows.
	  Bug #2684.
	* configure.in.in: Bump GTK+ requirement to 2.10 to avoid
	  the lot of potentially buggy #ifdef's.
	* NEWS: Update NEWS.

2007-12-02	Benedikt Meurer <benny@xfce.org>

	* === Released 0.2.8 ===
	* NEWS, configure.in.in: Bump version.
	* configure.in.in: Depend on libexo 0.3.4.
	* THANKS: Add missing translator credits.
	* po/*.po, po-doc/*.po: Update Project-Id-Version.
	* terminal/, configure.in.in: Revert DND patch as it would
	  require GTK 2.12, which is not possible for the 4.4.2 release.

2007-11-28	Benedikt Meurer <benny@xfce.org>

	* terminal/: Apply patch from Nick Schermer <nick@xfce.org> to
	  enable Drag and Drop for tabs between Terminal windows.
	  Bug #2684.
	* configure.in.in: Bump GTK+ requirement to 2.10 to avoid
	  the lot of potentially buggy #ifdef's.
	* NEWS: Update NEWS.

2007-11-15	Benedikt Meurer <benny@xfce.org>
